Updated linter fixes

--- a/tasks/install_ldap.yml
+++ b/tasks/install_ldap.yml
@@ -46,6 +46,7 @@
       copy:
         content: '{{ _admin_pass_hash.stdout }}'
         dest: '{{ openldap_server_hash_path }}'
+        mode: 0600
       no_log: true
 
     - name: Set password hash variable
@@ -55,13 +56,19 @@
 
 - name: Copy the slapd.conf configuration file
   template:
+    mode: 0600
+    owner: "{{ openldap_server_user }}"
+    group: "{{ openldap_server_user }}"
     src: slapd.conf.j2
     dest: "{{ openldap_server_app_path }}/slapd.conf"
   notify: restart slapd
 
 - name: Copy the ldap.conf configuration file
   template:
+    mode: 0600
     src: ldap.conf.j2
+    owner: "{{ openldap_server_user }}"
+    group: "{{ openldap_server_user }}"
     dest: "{{ openldap_server_app_path }}/ldap.conf"
 
 - name: Add openldap user to root group (ssl keys access)
