--- a/tasks/configure_ldap.yml
+++ b/tasks/configure_ldap.yml
@@ -3,6 +3,7 @@
   file:
     path: "/var/lib/ldap/{{ openldap_server_domain }}/"
     state: directory
+    mode: 0700
     owner: "{{ openldap_server_user }}"
     group: "{{ openldap_server_user }}"
 
@@ -11,6 +12,7 @@
       file:
         path: "{{ openldap_server_app_path }}/certs/"
         state: directory
+        mode: 0700
         owner: "{{ openldap_server_user }}"
         group: "{{ openldap_server_user }}"
 
@@ -64,6 +66,7 @@
 
 - name: Copy the template for creating base dn
   template:
+    mode: 0600
     src: "{{ openldap_server_ldif }}"
     dest: /tmp/
   register: result
