--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,12 @@ kind: pipeline
 name: molecule
 
 environment:
-  MOLECULE_IMAGES: ubuntu1604 ubuntu1804 ubuntu2004 debian9 debian10
+  MOLECULE_IMAGES: >
+    geerlingguy/docker-ubuntu1604-ansible
+    geerlingguy/docker-ubuntu1804-ansible
+    geerlingguy/docker-ubuntu2004-ansible
+    geerlingguy/docker-debian9-ansible
+    geerlingguy/docker-debian10-ansible
 
 services:
   - name: docker
@@ -51,6 +56,18 @@ steps:
           molecule test --all
         done
 
+  - name: Slack notification
+    image: plugins/slack
+    settings:
+      webhook:
+        from_secret: slack_webhook
+      channel: ci-cd
+      template: >
+        Molecule for `{{build.branch}}` failed.
+        {{build.link}}
+    when:
+      status:
+        - failure
 ---
 kind: pipeline
 name: release
@@ -60,7 +77,7 @@ trigger:
   event:
     - tag
 steps:
-  - name: publish
+  - name: Publish
     image: veselahouba/molecule
     environment:
       GALAXY_API_KEY:
@@ -69,3 +86,22 @@ steps:
       - >
         ansible-galaxy role import --api-key $${GALAXY_API_KEY}
         $${DRONE_REPO_OWNER} $${DRONE_REPO_NAME}
+
+  - name: Slack notification
+    image: plugins/slack
+    settings:
+      webhook:
+        from_secret: slack_webhook
+      channel: ci-cd
+      template: >
+        {{#success build.status}}
+          Publish for `{{build.tag}}` succeeded.
+          {{build.link}}
+        {{else}}
+          Publish for `{{build.tag}}` failed.
+          {{build.link}}
+        {{/success}}
+    when:
+      status:
+        - success
+        - failure
