--- a/molecule/custom_vars/host_vars/instance.yml
+++ b/molecule/custom_vars/host_vars/instance.yml
@@ -16,6 +16,9 @@ openldap_server_docker_mode: false
 
 # Cleanup old log.* files by default
 openldap_server_autoclean: true
+openldap_server_autoclean_cron:
+  hour: '2'
+  minute: '20'
 
 # SSL-related stuff
 openldap_server_enable_ssl: true
