--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,34 +3,39 @@ openldap_server_domain: example.com
 
 # This is the password for admin for openldap
 openldap_server_rootpw: passme
-
-# The ldif file
-openldap_server_ldif: domain.ldif
+# Root dn
+openldap_server_rootdn: cn=Manager,{{ _basedn }}
 
 openldap_server_app_path: "/etc/ldap/"
 openldap_server_user: "openldap"
-openldap_server_hash_path: "{{ openldap_server_app_path }}/adminhash"
-
-# Skip systemd scripts and use command instead
-openldap_server_docker_mode: false
-
-# Cleanup old log.* files by default
-openldap_server_autoclean: true
-openldap_server_autoclean_cron:
-  hour: '3'
-  minute: '30'
-  weekday: '5'
 
 # SSL-related stuff
-openldap_server_enable_ssl: false
+openldap_server_enable_tls: false
 openldap_server_ssl_cert: "{{ openldap_server_app_path }}/certs/cert.crt"
 openldap_server_ssl_key: "{{ openldap_server_app_path }}/certs/my.key"
 
 # Use self-signed certificate
 openldap_server_generate_cert: false
-
 # The self signed ssl parameters
-openldap_server_country: CZ
-openldap_server_state: Central Bohemia
-openldap_server_location: Prague
-openldap_server_organization: m-cloud.cz
+openldap_server_ssl:
+  country: CZ
+  state: Central Bohemia
+  location: Prague
+  organization: m-cloud.cz
+
+# ACLs - Do not touch unless you know what you're doing
+openldap_olcAccess:
+  - >-
+    to attrs=userPassword,shadowLastChange
+    by self write
+    by anonymous auth
+    by dn.exact="{{ openldap_server_rootdn }}" write
+    by * none
+  - >-
+    to dn.subtree="{{ _basedn }}"
+    by dn.exact="{{ openldap_server_rootdn }}" manage
+    by dn.exact="gidNumber=0+uidNumber=0,cn=peercred,cn=external,cn=auth" manage
+    by * read
+
+# internal basedn variable
+_basedn: "dc={{ openldap_server_domain.split('.')[0] }},dc={{ openldap_server_domain.split('.')[1] }}"
